# social-post-agent

./: .env.example  LANGSMITH_GUIDE.md  LICENSE  README.md  app.py  main.py  perp.txt  pyproject.toml  requirements.txt
agent/: agent_state.py  content_poster.py  image_generator.py  langgraph_workflow.py  langsmith_config.py  post_evaluator.py  post_generator.py  post_optimizer.py
agent/prompts/: post_evaluation_prompts.py  post_generation_prompts.py  post_optimization_prompts.py
agent/social_media/: instagram_poster.py  linkedin_poster.py  x_twitter_poster.py
agent/states/: agent_state.py
models/: models.py
notebook/: social_poster_agent.ipynb
ui/: manifest.json  popup.css  popup.html  popup.js
